deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: django-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: django-app

  template:

    metadata:
      labels:
        app: django-app

    spec:

      containers:

      - name: django-container
        image: amtulsaboor/django-devsecops:16

        ports:
        - containerPort: 8000
