service.yaml
apiVersion: v1
kind: Service

metadata:
  name: django-service

spec:

  selector:
    app: django-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: LoadBalancer
